--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <meta charset="UTF-8">
-        <title>Birthday Gift </title>
+        <title>happy birthday 🎉 </title>
     </head>
     <body>
             <div class="giftbox">
@@ -160,7 +160,7 @@ createCanvas(innerWidth,innerHeight)
 }
 var bubbles =[];
 var count =0;
-var textY=innerHeight-40;
+var textY=innerHeight-43;
 var x=0;
 function draw(){
     background(random(200,225),180,random(200,225))
@@ -182,7 +182,7 @@ function draw(){
    if(textY>=height/2){
        textY-=2;
    }
-   text("Happy Birthday\nbunnu mama",width/2,textY)
+   text("Happy Birthday\n Guriya didi",width/2,textY)
 
   if(count%100==0){
    bubbles.splice(0,5)
